--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,130 @@
  *= require_tree .
  *= require_self
  */
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: rgb(235, 235, 235);
+  margin: 0;
+}
+
+.text-right {
+  text-align: right;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(106, 106, 106);
+  transition: 0.1s;
+}
+
+a:hover {
+  color: rgb(0, 0, 0);
+}
+
+a.btn {
+  display: inline-block;
+  text-decoration: none;
+  padding: 5px 10px;
+  background-color: rgb(252, 215, 121);
+  border-radius: 10px;
+  margin-bottom: 10px;
+  color: black;
+  transition: 0.2s;
+}
+
+a.btn:hover {
+  background-color: rgb(252, 215, 121);
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+}
+
+#header {
+  box-shadow: 5px 2px 5px rgba(0, 0, 0, 0.1);
+  background-color: rgb(129, 129, 129);
+  text-align: right;
+  padding: 30px;
+  color: aliceblue;
+}
+
+#container {
+  width: 600px;
+  margin: 20px auto;
+}
+
+.article {
+  background-color: rgb(250, 250, 250);
+  border-radius: 10px;
+  padding: 10px;
+  margin: 0 0 5px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.article a {
+  text-decoration: none;
+  color: rgb(71, 71, 71);
+  font-weight: bold;
+  transition: 0.1s;
+}
+
+.article a:hover {
+  color: rgb(113, 113, 113);
+}
+
+.article .flex a {
+  display: inline-block;
+  margin: 5px;
+  font-weight: normal;
+  background-color: rgb(252, 215, 121);
+  padding: 5px 8px;
+  color: rgb(58, 58, 58);
+  border-radius: 8px;
+}
+
+.article .flex a:hover {
+  background-color: rgb(252, 215, 121);
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+}
+
+.article p {
+  margin: 10px;
+}
+
+.article h2 {
+  margin: 0 0 15px;
+  flex-grow: 1;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+}
+
+form {
+  padding: 10px;
+}
+
+form input {
+  display: block;
+  border: 1px solid rgb(188, 188, 188);
+  border-radius: 5px;
+  padding: 10px;
+  background-color: white;
+  margin-bottom: 5px;
+}
+
+form input[type=submit] {
+  padding: 8px 10px 5px 10px;
+  background-color: rgb(252, 215, 121);
+  border-radius: 10px;
+  border: 0;
+  margin: 20px 0 0;
+  color: black;
+  font-size: 1em;
+  cursor: pointer;
+  transition: 0.1s;
+}
+
+form input[type=submit]:hover {
+  background-color: rgb(252, 215, 121);
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+}
